fixed same random number issues

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "randomcolorgenerator",
+  "name": "user-reviews",
+  "homepage": "https://www.mrhussain.in/portfolio/user-reviews/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
